BuildHughes/translation-tool/inputs/source_meta/objects/HnsSiteAudits__x.object
<CustomObject>
    <description>HnsSiteAudits</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsSiteAudits</externalName>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSAUDITID__c</fullName>
        <description>HNSAUDITID</description>
        <externalDeveloperName>HNSAUDITID</externalDeveloperName>
        <label>HNSAUDITID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_COLUMNNAME__c</fullName>
        <description>Z_COLUMNNAME</description>
        <externalDeveloperName>Z_COLUMNNAME</externalDeveloperName>
        <label>Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_NEW_VALUE__c</fullName>
        <description>Z_NEW_VALUE</description>
        <externalDeveloperName>Z_NEW_VALUE</externalDeveloperName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_ORIGINAL_VALUE__c</fullName>
        <description>Z_ORIGINAL_VALUE</description>
        <externalDeveloperName>Z_ORIGINAL_VALUE</externalDeveloperName>
        <label>Original Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_ROW_CHANGED_BY__c</fullName>
        <description>Z_ROW_CHANGED_BY</description>
        <externalDeveloperName>Z_ROW_CHANGED_BY</externalDeveloperName>
        <label>Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_ROW_DATE_CHANGED__c</fullName>
        <description>Z_ROW_DATE_CHANGED</description>
        <externalDeveloperName>Z_ROW_DATE_CHANGED</externalDeveloperName>
        <label>Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsSiteAudits</label>
    <pluralLabel>HnsSiteAudits</pluralLabel>
</CustomObject>